FIX 114112 patch property margin : a top margin creates shifting when dropping elements

--- a/skins/default/property.scss
+++ b/skins/default/property.scss
@@ -39,7 +39,7 @@
 			cursor: default;
 			font-weight: normal;
 			line-height: 1em;
-			margin: 1px 0;
+			margin: 0 0 2px;
 			padding-left: 18px;
 
 			&:last-child {
